5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1723_2498.log
== TEST (2019-05-09 11:12:30) 
-- CODE:
a = int(input("h cidade A: "))
b = int(input("h cidade B: "))
perA = float(input("cp cidadade A: "))
perB = float(input("cp cidadade B: "))

contA = 0
contB = 0
t = 0

while (x==y):
	x = a + (perA/100)
	y = b + (perB/100)
	contA = contA + 1
	contB = contB + 1
	t = t + 1
print(t)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (x==y):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:12:54) 
-- CODE:
a = int(input("h cidade A: "))
b = int(input("h cidade B: "))
perA = float(input("cp cidadade A: "))
perB = float(input("cp cidadade B: "))

contA = 0
contB = 0
t = 0

while (x==y):
	x = a + (perA/100)
	y = b + (perB/100)
	contA = contA + 1
	contB = contB + 1
	t = t + 1
print(t)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (x==y):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:13:27) 
-- CODE:
a = int(input("h cidade A: "))
b = int(input("h cidade B: "))
perA = float(input("cp cidadade A: "))
perB = float(input("cp cidadade B: "))

contA = 0
contB = 0
t = 0

while (a==b):
	a = a + (perA/100)
	a = b + (perB/100)
	contA = contA + 1
	contB = contB + 1
	t = t + 1
print(t)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (x==y):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:28:13) 
-- CODE:
a = int(input("h cidade A: "))
b = int(input("h cidade B: "))
perA = float(input("cp cidadade A: "))
perB = float(input("cp cidadade B: "))

ano = 0

x = perA/100
y = perB/100

while (a>=b):
	a = a + (a*x)
	b = b + (b*y)
	ano = ano + 1
print(ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (x==y):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:28:54) 
-- CODE:
a = int(input("h cidade A: "))
b = int(input("h cidade B: "))
perA = float(input("cp cidadade A: "))
perB = float(input("cp cidadade B: "))

ano = 0

x = perA/100
y = perB/100

while (a<b):
	a = a + (a*x)
	b = b + (b*y)
	ano = ano + 1
print(ano)

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:33:10) 
-- CODE:
ha = int(input("h cidade A: "))
hb = int(input("h cidade B: "))
cpA = float(input("cp cidadade A: "))
cpB = float(input("cp cidadade B: "))

perA = ha/100
perB = hb/100

ano = 0

while (ha<hb):
	ha = ha + (cpa*perA)
	hb = hb + (cpb*perB)
	ano = ano + 1
print(ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    ha = ha + (cpa*perA)
NameError: name 'cpa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:35:13) 
-- CODE:
ha = int(input("h cidade A: "))
hb = int(input("h cidade B: "))
cpA = float(input("cp cidadade A: "))
cpB = float(input("cp cidadade B: "))

perA = ha/100
perB = hb/100

ano = 0

while (ha>hb):
	ha = ha + (cpa*perA)
	hb = hb + (cpb*perB)
	ano = ano + 1
print(ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    ha = ha + (cpa*perA)
NameError: name 'cpa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:35:19) 
-- CODE:
ha = int(input("h cidade A: "))
hb = int(input("h cidade B: "))
cpA = float(input("cp cidadade A: "))
cpB = float(input("cp cidadade B: "))

perA = ha/100
perB = hb/100

ano = 0

while (ha>hb):
	ha = ha + (cpa*perA)
	hb = hb + (cpb*perB)
	ano = ano + 1
print(ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    ha = ha + (cpa*perA)
NameError: name 'cpa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:35:39) 
-- CODE:
ha = int(input("h cidade A: "))
hb = int(input("h cidade B: "))
cpA = float(input("cp cidadade A: "))
cpB = float(input("cp cidadade B: "))

perA = ha/100
perB = hb/100

ano = 0

while (ha>hb):
	ha = ha + (cpA*perA)
	hb = hb + (cpB*perB)
	ano = ano + 1
print(ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    ha = ha + (cpa*perA)
NameError: name 'cpa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:35:50) 
-- CODE:
ha = int(input("h cidade A: "))
hb = int(input("h cidade B: "))
cpA = float(input("cp cidadade A: "))
cpB = float(input("cp cidadade B: "))

perA = ha/100
perB = hb/100

ano = 0

while (ha>hb):
	ha = ha + (cpA*perA)
	hb = hb + (cpB*perB)
	ano = ano + 1
print(ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    ha = ha + (cpa*perA)
NameError: name 'cpa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:36:21) 
-- CODE:
ha = int(input("h cidade A: "))
hb = int(input("h cidade B: "))
cpA = float(input("cp cidadade A: "))
cpB = float(input("cp cidadade B: "))

perA = ha/100
perB = hb/100

ano = 0

while (ha>hb):
	ha = ha + (cpA*perA)
	hb = hb + (cpB*perB)
	ano = ano + 1
print(ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    ha = ha + (cpa*perA)
NameError: name 'cpa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:36:32) 
-- CODE:
ha = int(input("h cidade A: "))
hb = int(input("h cidade B: "))
cpA = float(input("cp cidadade A: "))
cpB = float(input("cp cidadade B: "))

perA = ha/100
perB = hb/100

ano = 0

while (ha<hb):
	ha = ha + (cpA*perA)
	hb = hb + (cpB*perB)
	ano = ano + 1
print(ano)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:36:41) 
-- CODE:
ha = int(input("h cidade A: "))
hb = int(input("h cidade B: "))
cpA = float(input("cp cidadade A: "))
cpB = float(input("cp cidadade B: "))

perA = ha/100
perB = hb/100

ano = 0

while (ha<hb):
	ha = ha + (cpA*perA)
	hb = hb + (cpB*perB)
	ano = ano + 1
print(ano)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:36:59) 
-- CODE:
ha = int(input("h cidade A: "))
hb = int(input("h cidade B: "))
cpA = float(input("cp cidadade A: "))
cpB = float(input("cp cidadade B: "))

perA = ha/100
perB = hb/100

ano = 0

while (ha>=hb):
	ha = ha + (cpA*perA)
	hb = hb + (cpB*perB)
	ano = ano + 1
print(ano)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:37:15) 
-- CODE:
ha = int(input("h cidade A: "))
hb = int(input("h cidade B: "))
cpA = float(input("cp cidadade A: "))
cpB = float(input("cp cidadade B: "))

perA = ha/100
perB = hb/100

ano = 0

while (ha>=hb):
	ha = ha + (cpA*perA)
	hb = hb + (cpB*perB)
	ano = ano + 1
print(ano)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:39:34) 
-- CODE:
ha = int(input("h cidade A: "))
hb = int(input("h cidade B: "))
cpA = float(input("cp cidadade A: "))
cpB = float(input("cp cidadade B: "))

perA = cpA/100
perB = cpB/100

ano = 0

while (ha<hb):
	ha = ha + (cpA*perA)
	hb = hb + (cpB*perB)
	ano = ano + 1
print(ano)

-- OUTPUT:
28683
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:40:17) 
-- CODE:
ha = int(input("h cidade A: "))
hb = int(input("h cidade B: "))
cpA = float(input("cp cidadade A: "))
cpB = float(input("cp cidadade B: "))

perA = cpA/100
perB = cpB/100

ano = 0

while (ha<hb):
	ha = ha + (ha*perA)
	hb = hb + (hb*perB)
	ano = ano + 1
print(ano)

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:40:24) 
-- CODE:
ha = int(input("h cidade A: "))
hb = int(input("h cidade B: "))
cpA = float(input("cp cidadade A: "))
cpB = float(input("cp cidadade B: "))

perA = cpA/100
perB = cpB/100

ano = 0

while (ha<hb):
	ha = ha + (ha*perA)
	hb = hb + (hb*perB)
	ano = ano + 1
print(ano)

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:41:24) 
-- CODE:
ha = int(input("h cidade A: "))
hb = int(input("h cidade B: "))
cpA = float(input("cp cidadade A: "))
cpB = float(input("cp cidadade B: "))

perA = cpA/100
perB = cpB/100

ano = 0

while (ha<hb):
	ha = ha + (ha*perA)
	hb = hb + (hb*perB)
	ano = ano + 1
print(ano)

-- EXECUTION TIME:
0.121697
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
